Add internal Library backend starter
